# ucsd-tennis-monitor

./: .env.example  .gitignore  README.md  cron.example  pyproject.toml
.github/workflows/: ucsd-tennis-monitor.yml
src/ucsd_tennis_monitor/: __init__.py  calendar_filter.py  config.py  google_auth.py  models.py  monitor.py  notifier.py  parsing.py  state.py  ucsd_client.py  warning_filters.py
tests/: test_calendar_filter.py  test_parsing.py  test_state.py
